--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,14 @@ android {
 
 dependencies {
 
+
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-common:20.3.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.firebase:firebase-firestore:24.7.0'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
