--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.HealthWise_Project"
         tools:targetApi="31">
         <activity
+            android:name=".HealthRecord"
+            android:exported="false" />
+        <activity
+            android:name=".EditProfile"
+            android:exported="false" />
+        <activity
             android:name=".UploadUserAvatar1"
             android:exported="false" />
         <activity
