--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,19 @@
         android:theme="@style/Theme.HealthWise_Project"
         tools:targetApi="31">
         <activity
-            android:name=".HealthRecord"
+            android:name=".Controller.HealthRecord"
             android:exported="false" />
         <activity
-            android:name=".EditProfile"
+            android:name=".Controller.EditProfile"
             android:exported="false" />
         <activity
-            android:name=".UploadUserAvatar1"
+            android:name=".Controller.UploadUserAvatar1"
             android:exported="false" />
         <activity
-            android:name=".HistoryApp"
+            android:name=".Controller.HistoryApp"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".View.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
